// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`searchFlightsSummaryHeader should render enhanced standby header view 1`] = `
<SearchFlightsSummaryHeader
  date="2022-11-30"
  from="Dallas, TX (DAL)"
  isEnhancedStandby={true}
  onShareClickedCb={[Function]}
  to="Austin, TX (AUS)"
>
  <div
    className="flight-search-summary enhanced-flight-search-summary"
  >
    <h5
      className="page header attached flight-search-summary"
    >
      <p
        className="sub header date"
      >
        Today's date:  Wed, Nov 30, 2022
      </p>
      <p
        className="sub header description"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
      />
    </h5>
    <a
      className="flight-search-summary share-button"
      onClick={[Function]}
    >
      Share
    </a>
  </div>
</SearchFlightsSummaryHeader>
`;

exports[`searchFlightsSummaryHeader should render enhanced standby header view next day 1`] = `
<SearchFlightsSummaryHeader
  date="2022-11-29"
  from="Dallas, TX (DAL)"
  isEnhancedStandby={true}
  onShareClickedCb={[Function]}
  to="Austin, TX (AUS)"
>
  <div
    className="flight-search-summary enhanced-flight-search-summary"
  >
    <h5
      className="page header attached flight-search-summary"
    >
      <p
        className="sub header date"
      >
        Yesterday's date:  Tue, Nov 29, 2022
      </p>
      <p
        className="sub header description"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
      />
    </h5>
    <a
      className="flight-search-summary share-button"
      onClick={[Function]}
    >
      Share
    </a>
  </div>
</SearchFlightsSummaryHeader>
`;

exports[`searchFlightsSummaryHeader should render enhanced standby header view previous day 1`] = `
<SearchFlightsSummaryHeader
  date="2022-12-01"
  from="Dallas, TX (DAL)"
  isEnhancedStandby={true}
  onShareClickedCb={[Function]}
  to="Austin, TX (AUS)"
>
  <div
    className="flight-search-summary enhanced-flight-search-summary"
  >
    <h5
      className="page header attached flight-search-summary"
    >
      <p
        className="sub header date"
      >
        Tomorrow's date:  Thu, Dec 1, 2022
      </p>
      <p
        className="sub header description"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
      />
    </h5>
    <a
      className="flight-search-summary share-button"
      onClick={[Function]}
    >
      Share
    </a>
  </div>
</SearchFlightsSummaryHeader>
`;
